sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() { var fin = getNombreValeurs() - 2
                        var ok = true 
                        var debut = 0
                     while (ok) {
                       ok = false
                      for (i <- 0 to n) {
                       if (!plusPetit(i,i+1)) { echange(i,i+1)
                                               ok= true } }
                      for (i<- (0 to n).reverse) {
                       if (!plusPetit(i,i+1)) { echange(i+1,i)
                                               ok = true} 
                      fin -=1
                      debut +=1}
}